# PDF-Draft-Transcriber

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  agents.md  context.md  pyproject.toml
src/goodnotes_prep/: __init__.py  cli.py  core.py
tests/: test_core.py
