[project]
name = "goodnotes-pdf-prep"
version = "0.1.0"
description = "Prepare GoodNotes-exported PDFs as AI-friendly evidence packages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["goodnotes", "pdf", "ocr", "whiteboard", "mindmap"]
dependencies = [
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
goodnotes-prep = "goodnotes_prep.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goodnotes_prep"]
